# falconpy

./: .cc-metadata.yml  .flake8  .gitbook.yaml  .gitignore  .lgtm.yml  .pylintrc  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  api_complete.py  dev_setup.py  lgtm.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  wordlist.txt
docs/: .gitignore  .jshintignore  .jshintrc  404.html  Gemfile  PACKAGING.md  README.md  SUMMARY.md  _config.yml  authenticating-to-the-api.md  basic-service-class-usage.md  basic-uber-class-usage.md  blog.html  explore-topics.html  gulpfile.js  index.html  installation-upgrades-and-removal.md  package.json  search.json
falconpy/: __init__.py  api_complete.py  device_control_policies.py  event_streams.py  host_group.py  iocs.py  oauth2.py  real_time_response_admin.py  user_management.py
samples/: README.md  config_sample.json  example_auth.py
services/: README.MD  device_control_policies.py  event_streams.py  falconx_sandbox.py  hosts.py  incidents.py  intel.py  iocs.py  real_time_response_admin.py  sensor_update_policy.py
tests/: 5records.raw  README.md  test.yml  test_admission_control_policies.py  test_alerts.py  test_api_integrations.py  test_api_request.py  test_ascii_decode_fix.py  test_aspm.py  test_authentications.py  test_authorization.py  test_cao_hunting.py  test_case_management.py  test_certificate_based_exclusions.py  test_cloud_aws_registration.py  test_cloud_azure_registration.py  test_cloud_connect_aws.py  test_cloud_google_cloud_registration.py  test_cloud_oci_registration.py  test_cloud_policies.py  test_cloud_security.py  test_cloud_security_assets.py  test_cloud_security_compliance.py  test_cloud_security_detections.py  test_cloud_snapshots.py  test_compliance_assessments.py  test_configuration_assessment.py  test_configuration_assessment_evaluation_logic.py  test_container_alerts.py  test_container_detections.py  test_container_image_compliance.py  test_container_images.py  test_container_packages.py  test_container_vulnerabilities.py  test_content_update_policies.py  test_correlation_rules.py  test_correlation_rules_admin.py  test_cspm_registration.py  test_custom_ioa.py  test_custom_storage.py  (+97 more)
util/: README.md  babel_fish.py  coverage.config  create-lambda-layer.sh  debug.sh  docstyle.sh  find-strings.sh  lint.sh  public-modules.sh  public_modules.sh  run-tests.sh  set-debug.sh  (+3 more)
(+836 files in other folders)
